// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Component test Test Component rendered 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="innerWrapper"
      data-testid="carousel-inner-wrapper"
      style="transform: translateX(-0%);"
    >
      <div
        class="carouselItem"
      >
        <div
          class="itemWrapper"
        >
          <div
            class="textWrapper"
            style="color: white;"
          >
            <div
              class="title"
            >
              xPhone
            </div>
            <div
              class="desc"
            >
              Lots to love. Less to spend.
            </div>
            <div
              class="desc"
            >
              Starting at $399
            </div>
          </div>
          <div
            class="imgWrapper"
          >
            <img
              alt=""
              src="iphone.png"
            />
          </div>
        </div>
      </div>
      <div
        class="carouselItem"
      >
        <div
          class="itemWrapper"
        >
          <div
            class="textWrapper"
          >
            <div
              class="title"
            >
              Tablet
            </div>
            <div
              class="desc"
            >
              Just the right amount of everything
            </div>
          </div>
          <div
            class="imgWrapper"
          >
            <img
              alt=""
              src="tablet.png"
            />
          </div>
        </div>
      </div>
      <div
        class="carouselItem"
      >
        <div
          class="itemWrapper"
        >
          <div
            class="textWrapper"
          >
            <div
              class="title"
            >
              Buy a Tablet or xPhone for college. Get airPods
            </div>
          </div>
          <div
            class="imgWrapper"
          >
            <img
              alt=""
              src="airpods.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="wrapper"
      data-testid="indicator-wrapper"
    >
      <div
        class="item"
      >
        <div
          class="activeItem"
          style="transition-duration: 3000ms;"
        />
      </div>
      <div
        class="item"
      >
        <div
          class=""
        />
      </div>
      <div
        class="item"
      >
        <div
          class=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Component test click Indicator of Carousel  1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="innerWrapper"
      data-testid="carousel-inner-wrapper"
      style="transform: translateX(-200%);"
    >
      <div
        class="carouselItem"
      >
        <div
          class="itemWrapper"
        >
          <div
            class="textWrapper"
            style="color: white;"
          >
            <div
              class="title"
            >
              xPhone
            </div>
            <div
              class="desc"
            >
              Lots to love. Less to spend.
            </div>
            <div
              class="desc"
            >
              Starting at $399
            </div>
          </div>
          <div
            class="imgWrapper"
          >
            <img
              alt=""
              src="iphone.png"
            />
          </div>
        </div>
      </div>
      <div
        class="carouselItem"
      >
        <div
          class="itemWrapper"
        >
          <div
            class="textWrapper"
          >
            <div
              class="title"
            >
              Tablet
            </div>
            <div
              class="desc"
            >
              Just the right amount of everything
            </div>
          </div>
          <div
            class="imgWrapper"
          >
            <img
              alt=""
              src="tablet.png"
            />
          </div>
        </div>
      </div>
      <div
        class="carouselItem"
      >
        <div
          class="itemWrapper"
        >
          <div
            class="textWrapper"
          >
            <div
              class="title"
            >
              Buy a Tablet or xPhone for college. Get airPods
            </div>
          </div>
          <div
            class="imgWrapper"
          >
            <img
              alt=""
              src="airpods.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="wrapper"
      data-testid="indicator-wrapper"
    >
      <div
        class="item"
      >
        <div
          class=""
          style=""
        />
      </div>
      <div
        class="item"
      >
        <div
          class=""
        />
      </div>
      <div
        class="item"
      >
        <div
          class="activeItem"
          style="transition-duration: 3000ms;"
        />
      </div>
    </div>
  </div>
</div>
`;
